<resources>
    <string name="app_name">LearnToEarn2</string>
    <string name="learn_to_earn">Learn to Earn</string>
    <string name="button_login">Войти в систему</string>
    <string name="button_signup">Зарегистрироваться</string>
    <string name="button_forgot_password">Забыли пароль?</string>
    <string name="profile_in_shutter">Профиль</string>
    <string name="profile_settings">Настройки</string>
    <string name="education_page">Обучение</string>
    <string name="log_out">Выйти из системы</string>
    <string name="drawer_open">Drawer is Opened</string>
    <string name="drawer_close">Drawer is Closed</string>
    <string name="name">Имя:</string>
    <string name="surname">Фамилия</string>
    <string name="hintname">Введите имя</string>
    <string name="hintsurname">Введите фамилию</string>
    <string name="button_save">Сохранить изменения!</string>

    <string name="startText1">Что изучает\n физика?</string>
    <string name="startText2">Некоторые физ.\n    термины</string>
    <string name="startText3">Физ.Величины</string>
    <string name="startText4">Что изучает\n физика?</string>
    <string name="Text1">Физика - это наука о неживой природе, которая изучает общие законы природы, структуру и движение материи.</string>
    <string name="Text2">Изменения, происходящие с телами и веществами в окружающем мире, называют явлениями.</string>
    <string name="Text3">Таяние льда, падение камня, кипение воды, ветер, гром - всё это можно назвать явлениями!</string>
    <string name="Text4">В этой науке изучают: механические, электрические, магнитные, тепловые, звуковые и световые явления. Всё вышеперечисленное называют физическими явлениями, из этого мы делаем вывод:\n
Любые превращения вещества или проявления его свойств, происходящие без изменения состава вещества, называют физическими явлениями.</string>
    <string name="Text5">Физическое тело - это каждое из окружающих нас тел, которое имеет форму и объём.\n\nВсё то, из чего состоят физические тела - называется веществом</string>
    <string name="Text6">Вещество - это один из видов материи, а сама материя - это всё, что существует во вселенной</string>
    <string name="Text7">Физи́ческая величина́ — измеряемое качество, признак или свойство материального объекта или явления. Её можно измерить\n\nИзмерить физическую величину - это значит сравнить её с однородной величиной принятой за единицу</string>
    <string name="Text8">C 1963г. в России и других странах применяется международная система единиц - СИ\n\nВ этой системе измеряется:\nДлина - в метрах(1м)\nВремя - в секундах(1с)\nМасса - в килограммах(1кг) </string>
    <string name="Text9">Часто используют единицы измеряния, больших в несколько раз, чем в СИ. Так например\nГекто(г)- множитель 100\nКило(к) - множитель 10000 \nМега(М) - множитель 1000000\nДеци(д) - множитель 0,1\nСанти(с) -множитель 0,01\nМилли(м) - множитель 0,001\n\nПРИМЕР:\nДлина тенисной ракетки 60 см. Выразить длину в метрах:\n60см = 60*0,01м =0,6м  </string>
    <string name="Text10">Как говорилось ранее, величину можно измерить, а именно с помощью разных приборов\n\n Перед тем как  приступить к измерению, следует определить цену деления. Для этого необходимо:\n\n-Найти два ближайших штриха шкалы возле которых написаны значения\n-Вычесть из большего значения меньшее и полученное число разделить на число делений находящихся между ними</string>

    <string name="StartPhysic4">Задача физики состоит в том, чтобы открывать и изучать законы, которые связывают между собой различные физические явления происходящие в природе.</string>
    <string name="q1">а) Это наука о неживой природе, которая изучает общие законы природы, структуру и движение материи</string>
    <string name="q2">б) Это наука о живой природе, взаимодействиях организов, которая исследует строение и свойства вещества, а также происходящих с ним изменений</string>
    <string name="q3">в) Это наука о живой природе.Изучает все аспекты жизни, в частности, структуру, функционирование, рост, происхождение, эволюцию и распределение живых организмов на Земле</string>
    <string name="q4">а) Изменения, происходящие с веществами в окружающем мире</string>
    <string name="q5">б) Изменения, происходящие с телами в окружающем мире</string>
    <string name="q6">в) Изменения, происходящие с телами и веществами в окружающем мире</string>
    <string name="q7">а) механические, электрические, магнитные, тепловые, звуковые и световые</string>
    <string name="q8">б) механические, аэробные, анаэробные, тепловые, звуковые, электрические и световые явления</string>
    <string name="q9">в) Электрические, световые, тепловые</string>
    <string name="q10">а) Это слишком абстрактный вопрос, на который нельзя дать ответ</string>
    <string name="q11">б) Открывать и изучать законы, которые связывают с собой различные физические явления, происходящие в природе</string>
    <string name="q12">в) В изучении необычных свойств человека </string>
    <string name="q13">а) Это тело, имеющее форму </string>
    <string name="q14">б) Это тело, имеющее объём </string>
    <string name="q15">в) Это каждое из окружающих нас тел, имеющее форму и объём</string>
    <string name="q16">а) Препараты в аптеке</string>
    <string name="q17">б) Всё из чего состоят вещества</string>
    <string name="q18">в) Слишком абстрактный вопрос </string>
    <string name="q19">в) Это всё, что существует во вселенной </string>
    <string name="q20">в) Это очень умное слово </string>
    <string name="q21">в) Это вещество </string>
    <string name="q22">а) Измеряемое количество, признак или свойство материального объекта или явления </string>
    <string name="q23">б) Неизмеряемое количество, признак или свойство материального объекта или явления </string>
    <string name="q24">в) Неизмеряемое количество, признак материального объекта </string>
    <string name="q25">а) Сравнить её с однородной величиной, принятой за единицу </string>
    <string name="q26">б) Сравнить её с близкой по смыслу величиной </string>
    <string name="q27">в) На глазок определить </string>
    <string name="q28">а) Системный Инспектор </string>
    <string name="q29">б) Международная Система Единиц </string>
    <string name="q30">б) Сложная Инициализация </string>
    <string name="q31">а) Длина[1м],Масса[1кг],Время[1c]</string>
    <string name="q32">б) Длина[1кг],Масса[с],Время[1м] </string>
    <string name="q33">в) Длина[1с],Масса[1м],Время[1кг]</string>
    <string name="q34">а) Гекто[100],  Кило[10000],  Мега[1000000],  Санти[0,1],  Деци[0,01],  Милли[0,001]</string>
    <string name="q35">б) Гекто[1000],  Кило[100],  Мега[100000000],  Санти[0,001],  Деци[0,1],  Милли[0,00001]</string>
    <string name="q36">в) Гекто[10],  Кило[100],  Мега[1000],  Санти[100000],  Деци[1000000],  Милли[10000000]</string>

    <string name="a1">Что такое физика?</string>
    <string name="a2">Что такое явление?</string>
    <string name="a3">Основные физические явления</string>
    <string name="a4">В чём состоит задача физики?</string>
    <string name="a5">Что такое физическое тело?</string>
    <string name="a6">Что такое вещество?</string>
    <string name="a7">Что такое материя?</string>
    <string name="a8">Что такое Физическая величина?</string>
    <string name="a9">Что значит измерить физ велиничу?</string>
    <string name="a10">Что такое СИ?</string>
    <string name="a12">Выберите правильные единицы измерения</string>
    <string name="a13">Выберите правильный ответ</string>
    <string name="therms">Некоторые\n физические\nтермины</string>
    <string name="enable_notifications">Включить уведомления</string>
    <string name="grade">Класс:</string>

</resources>
